# civilservant-wikipedia-thanksender

./: .gitignore  Pipfile  send_thanks.py  send_thanks_cron.sh  setup.cfg
civilservant_thankssender.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
config/: frwiki_control_check.yaml  frwiki_pilot_survey.yaml  frwiki_welcome.yaml  frwiki_welcome_survey.yaml
ipython/: frwiki assemble pilot survey data.ipynb  frwiki pilot survey make account map.ipynb  frwiki stop rule final data collector.ipynb  frwiki welcome final data collector - extract db and merge survey.ipynb  frwiki welcome final data collector - get external data.ipynb  grat thankee - blog post stats.ipynb  grat thankee - check block balance.ipynb  grat thankee verify as if i'm jnm.ipynb  gratitude thankee final data collector - extract db and merge survey.ipynb  gratitude thankee final data collector - get external data.ipynb  gratitude thankee final data collector - make thanks-recipient contagaion reciprocate analysis.ipynb  impact stats - verify.R.ipynb  make gdpr anonymous param glueing.ipynb  missed_onboarders_contributions.ipynb
templates/: fr_wiki_welcome_survey  fr_wiki_welcome_survey_summary
templates/fr_wiki_welcome/: fr.wikitext.fstring
templates/fr_wiki_welcome_pilot_survey/: fr.wikitext.fstring
templates/fr_wiki_welcome_pilot_survey_summary/: fr.wikitext.fstring
templates/test/: test.wikitext.fstring  (+1 more)
tests/: test_send_thanks.py
thanks/: action_creating.py  action_intervening.py  daily_completed_report.py  experiment_action_controller.py  periodic_report.py  send_thanks.py  utils.py
(+24 files in other folders)
