[metadata]
name = civilservant-thankssender
# version = attr: 0.1
description = Send thanks via Wikipedia API
author = The CivilServant Team
author_email = "system.operations@civilservant.io"
license = MIT
# license_file = LICENSE
#long_description = file: README.md
# long_description_content_type = text/markdown
#url = "https://github.com/mitmedialab/civilservantlib-api"
classifiers =
    License :: OSI Approved :: MIT License
    Intended Audience :: Science/Research
    Intended Audience :: Developers
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development
    Topic :: Scientific/Engineering

[options]
# packages = civilservant
python_requires = >= 3.7
install_requires =
		 mwapi
		 mwoauth
		 requests_oauthlib
		 sqlalchemy
		 civilservant

# [options.entry_points]
# civilservant_tasks =
#    api = civilservant.tasks.api
#    api.modelsync = civilservant.tasks.api.modelsync

